# indygestion

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml
agent/: README.md  config.go  go.mod  go.sum  main.go  network.go  notifier.go  queue.go  server.go  tray.go  uploader.go
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  main.py
backend/app/api/: activity.py  clips.py  dashboard.py  devices.py  ingest.py  jobs.py  projects.py  router.py  settings.py  upload.py
backend/app/models/: __init__.py  clip.py  file_operation.py  ingest_job.py  ingest_session.py  project.py  setting.py
backend/app/schemas/: __init__.py  clip.py  ingest.py  job.py  project.py  settings.py
backend/app/services/: __init__.py  clustering.py  estimation.py  ffprobe.py  storage.py
backend/app/tasks/: __init__.py  celery_app.py
device-watcher/: Dockerfile  requirements.txt
device-watcher/app/: __init__.py  api.py  config.py  copier.py  main.py  mounter.py  scanner.py  watcher.py
device-watcher/udev/: 99-indygestion.rules
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
nginx/: nginx.conf
scripts/: bootstrap-unraid.sh  install-unraid.sh
unraid/: README.md  indygestion.xml
whisper/: Dockerfile  app.py  requirements.txt
worker/: Dockerfile  celery_app.py  requirements.txt
worker/tasks/: __init__.py  archive.py  cluster.py  embed.py  pipeline.py  proxy.py  transcribe.py
(+44 files in other folders)
